--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -46,6 +46,16 @@
 	<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
 	<section class="content">
 		<section class="container">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52019855-1', 'eastendeatz.com');
+		  ga('send', 'pageview');
+
+		</script>
 			{% block content %}{% endblock %}
 		</section>
 	</section>
@@ -61,6 +71,7 @@
 
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
+	<footer id="footer" data-ng-include="'/modules/core/views/footer.client.view.html'"></footer>
 	<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 
 	{% endif %}
