--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -71,7 +71,7 @@
 
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
-	<footer id="footer" data-ng-include="'/modules/core/views/footer.client.view.html'"></footer>
+	<!-- <footer id="footer" data-ng-include="'/modules/core/views/footer.client.view.html'"></footer> -->
 	<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 
 	{% endif %}
