--- a/public/modules/core/views/footer.client.view.html
+++ b/public/modules/core/views/footer.client.view.html
@@ -20,8 +20,9 @@
 				<li><a ui-sref="">Meet the Chefs</a></li>
 			</ul>
 		</div>
-		<div class="col-md-4 footerow">
-			<h4>Our Coverage Areas</h4>
+		<div class="col-md-4 footerow" id="coverageAreas">
+			<h4>Featured Coverage Areas</h4>
+			<h6>Shadyside</h6>
 			<img src="http://www.placehold.it/72x72">
 		</div>
 	</footer>
