--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,6 +1,6 @@
 <img class="bg" src="modules/core/img/bg1.jpg">
 <section data-ng-controller="HomeController">
-	<section class="col-md-12" id="Toprowuiview">
+	<section class="col-lg-12 hidden-md hidden-sm hidden-xs" id="Toprowuiview">
 		<!-- <img id="mainSecImg" src="modules/core/img/brand/eee2abc-plate-only.png"> -->
 		<div class="col-lg-3 visible-lg"><h5 class="spanTitle3"><i>Let us cook for you!</i></h5></div>
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/eee-txt-green-sm.png"></div>
@@ -13,8 +13,13 @@
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/plate-sm.png"></div>
 		<div class="col-lg-3 visible-lg" style="vertical-align: baseline;"><h5 class="spanTitle4"><i>xxx@eastendeatz.com</i></h5></div>
 		<div class="col-md-12 col-sm-12 col-xs-12 hidden-lg"><h5 class="spanTitle5">412-000-0000</h5><h5><i>xxx@eastendeatz.com</i></h5></div>
-
     </section>
+	
+	<section class="col-md-12 hidden-lg" id="Toprowuiview">
+		<h1 class="visible-md">Catering, Private-Chef Services<br>&amp; Delivered Meals</h1>
+		<h2 class="visible-sm visible-xs">Catering, Private-Chef Services<br>&amp; Delivered Meals</h2>
+		<h5 class="spanTitle3" align="center"><i>Let us cook for you!&nbsp;&nbsp;&nbsp;412-000-0000&nbsp;&nbsp;&nbsp;xxx@eastendeatz.com</i></h5>
+	</section>
 		
 
 		<!-- LEFT COLUMN______________________________________________________________________________________ -->
@@ -48,7 +53,7 @@
 		<!-- CENTER COLUMN______________________________________________________________________________________ -->
 		<section class="col-md-4" id="Cmidcol">
 			
-			<div class="col-md-12" >
+			<div class="col-md-12">
 			<h4>Catering &amp; Events</h4>
 				<div class="col-md-12" id="imageTWO">
 					<h2>Your Event Specialist</h2>
@@ -70,6 +75,7 @@
 					</ul>
 				</div>
 			</div>
+			<br>
 
 			<h4>Who We Are</h4>
 			<div class="col-md-12">	
@@ -78,6 +84,18 @@
 				Sourcing only the freshest, local, and organic ingredients prepared by top-class, experienced chefs,  we aim for the highest-quality cuisine and memorable experiences.
 				<br><br>
 				Our services do not begin only with food...  We provide professional and courteous service and offer onsite waitstaff, cleanup, labor (event set-up/teardown), and linen for any of your special event needs.</p>
+				<br>
+				
+			</div>
+
+			<h4>Find Us Online!</h4>
+			<div class="col-md-12">	
+				<ul class="nav" style="padding-bottom: 5px;">
+					<li><a href="" id="social1"></a></li>
+					<li><a href="" id="social2"></a></li>
+					<li><a href="" id="social3"></a></li>
+					<li><a href="" id="social4"></a></li>
+				</ul>
 			</div>
 		</section>
 
@@ -103,7 +121,7 @@
 			</div>
 			
 			
-			<div class="col-md-12" id="image">
+			<div class="col-md-12" id="image" style="padding-bottom: 15px;">
 				<h4>Meet Us!</h4>
 				<div class="col-md-6">
 					<img style="position: relative; float: left; padding-right: 5px;" src="http://placehold.it/64x64" alt="Chef Shawn Kelly"/>
