--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -41,10 +41,11 @@
 		         <h2>Your Personal Chef</h2>
 		         <p>Breakfast, lunch, or dinner.   Around-the-clock, weekly, or on special occaisions.  Our hours of operation depend solely on the wants and needs of the customer.<br><br>
 		         Contact us to schedule and see how a private chef can make a wonderful difference in your life.</p>
+			<br>
 			</div>
 
 			<h4>Dietary Restrictions &amp; Routines</h4>
-			<div class="col-md-12" id="image">
+			<div class="col-md-12" id="image" style="padding-bottom: 8px;">
 				<p>Interested in paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:xxx@gmail.com">xxx@gmail.com</a>.</p>
 			</div>
 
@@ -90,7 +91,7 @@
 
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
-				<ul class="nav" style="padding-bottom: 5px;">
+				<ul class="nav" style="padding-bottom: 31px;">
 					<li><a href="" id="social1"></a></li>
 					<li><a href="" id="social2"></a></li>
 					<li><a href="" id="social3"></a></li>
@@ -120,20 +121,18 @@
 		        Delivered meals bring customization, freshness, and convenience.  Book a scheduling time soon.</p> 
 			</div>
 			
-			
-			<div class="col-md-12" id="image" style="padding-bottom: 15px;">
-				<h4>Meet Us!</h4>
+			<h4>Meet Us</h4>
+			<div class="col-md-12" id="image">
 				<div class="col-md-6">
-					<img style="position: relative; float: left; padding-right: 5px;" src="http://placehold.it/64x64" alt="Chef Shawn Kelly"/>
-					<h5>Chef Shawn Kelly</h5>
-					<p>Lorem ipsum dolor sit amet.</p>
+					<i class="fa fa-user fa-3x"></i>
+					<h5>Chef Sean Kelly</h5>
+					<p>15+ years of executive experience in fine dining, upscale hotels, and catering. Creator of East End Cafe.</p>
 				</div>
 
 				<div class="col-md-6">
-					<img style="position: relative; float: left; padding-right: 5px;" src="http://placehold.it/64x64" alt="Chef Dustin Miller"/>
+					<i class="fa fa-user fa-3x"></i>
 					<h5>Chef Dustin Miller</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut.</p>
+					<p>Extensive multi-year experience in large events, including Executive Sous Chef Pittsburgh Steelers, Heinz Field and Aramark.</p>
 				</div>
 		         
 			</div>
