--- a/public/modules/core/views/home.client.view.menu.html
+++ b/public/modules/core/views/home.client.view.menu.html
@@ -1,6 +1,6 @@
 <section class="col-md-12" id="Toprowuiview" ng-controller="HomeController">
 	
-	<div class="col-md-8 insideCmidCol"> 
+	<div class="col-md-8 col-sm-12 col-xs-12 insideCmidCol"> 
 		<h1 align="center">Fresh, Local, Organic, Upscale</h1>
 		<h5 align="center"><small style="color: white;">Contact Us to Discuss <br>Custom Menus, Seasonal Choices, Dietary Requirements, &amp; Event Planning</small></h5>
 
@@ -39,4 +39,12 @@
 		</div>
 		
 	</div>
+
+	<div class="col-lg-3 col-md-3 menuAdsRight">
+		<div class="row">
+			<img align="center" src="modules/core/img/table-catering-ad.png">
+		</div>
+
+	</div>
+
 </section>
