update menu link

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -104,7 +104,7 @@
 		<!-- Right COLUMN______________________________________________________________________________________ -->
 		<section class="col-md-4" id="Rmidcol">
 
-			<div class="col-md-12 insideCmidCol" onclick="location.href='http://localhost:3000/#!/menu' "> <!--  -->
+			<div class="col-md-12 insideCmidCol" onclick="location.href='http://eastendeatz.herokuapp.com/#!/menu' "> <!--  -->
 				<h3 align="center"><span id="red">&#10087</span> Our Mission <span id="red">&#10087</span></h3>
 					<h4 align="center">Fresh, Local, Organic, Upscale</h4>
 				<h5 align="center"><small style="color: white;">Click to View Sample Menu</small></h5>
