pictures added to folder, content update

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -5,21 +5,21 @@
 		<!-- <img id="mainSecImg" src="modules/core/img/brand/eee2abc-plate-only.png"> -->
 		<div class="col-lg-3 visible-lg"><h5 class="spanTitle3"><i>Let us cook for you!</i></h5></div>
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/eee-txt-green-sm.png"></div>
-		<div class="col-lg-3 visible-lg"><h5 class="spanTitle4">412-000-0000</h5></div>
+		<div class="col-lg-3 visible-lg"><h5 class="spanTitle4">412-352-5439</h5></div>
 
 		
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h1>Catering, Private-Chef Services<br>&amp; Delivered Meals</h1></div>
 
 		<div class="col-lg-3 visible-lg"><h5 class="spanTitle3"><i>Serving the Pittsburgh-area</i></h5></div>
 		<div class="col-lg-6 visible-lg" align="center"><img src="modules/core/img/brand/plate-sm.png"></div>
-		<div class="col-lg-3 visible-lg" style="vertical-align: baseline;"><h5 class="spanTitle4"><i>xxx@eastendeatz.com</i></h5></div>
-		<div class="col-md-12 col-sm-12 col-xs-12 hidden-lg"><h5 class="spanTitle5">412-000-0000</h5><h5><i>xxx@eastendeatz.com</i></h5></div>
+		<div class="col-lg-3 visible-lg" style="vertical-align: baseline;"><h5 class="spanTitle4"><i>eecpgh@comcast.net</i></h5></div>
+		<div class="col-md-12 col-sm-12 col-xs-12 hidden-lg"><h5 class="spanTitle5">412-352-5439</h5><h5><i>eecpgh@comcast.net</i></h5></div>
     </section>
 	
 	<section class="col-md-12 hidden-lg" id="Toprowuiview">
 		<h1 class="visible-md">Catering, Private-Chef Services<br>&amp; Delivered Meals</h1>
 		<h2 class="visible-sm visible-xs">Catering, Private-Chef Services<br>&amp; Delivered Meals</h2>
-		<h5 class="spanTitle3" align="center"><i>Let us cook for you!&nbsp;&nbsp;&nbsp;412-000-0000&nbsp;&nbsp;&nbsp;xxx@eastendeatz.com</i></h5>
+		<h5 class="spanTitle3" align="center"><i>Let us cook for you!&nbsp;&nbsp;&nbsp;412-352-5439&nbsp;&nbsp;&nbsp;eecpgh@comcast.net</i></h5>
 	</section>
 		
 
@@ -47,7 +47,7 @@
 
 			<h4>Dietary Restrictions &amp; Routines</h4>
 			<div class="col-md-12" id="image" style="padding-bottom: 8px;">
-				<p>Interested in paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:xxx@gmail.com">xxx@gmail.com</a>.</p>
+				<p>Interested in paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
 			</div>
 
 		</section>
@@ -65,15 +65,14 @@
 						<li>Holidays &amp; Celebrations</li>
 						<li>Corporate Meetings &amp; Luncheons</li>
 						<li>Family Parties, Reunions, &amp; Graduations</li>
-						<li>Baby, Bridal Showers, and more!</li>
+						<li>Baby, Bridal Showers, &amp; more!</li>
 					</ul>
-					<p>We make sure to deliver on the promise of delicious food and great service.  Contact us at <a href="tel:1+412-000-0000">(412)-000-0000</a> to discuss your next event.</p>
+					<p>We make sure to deliver on the promise of delicious food and great service.  Contact us at <a href="tel:1+412-352-5439">(412)352-5439</a> to discuss your next event.</p>
 					<h6>Additionally, we can provide:</h6>
 					<ul>
 						<li>Children's meals</li>
-						<li>Dietary-specific meals and planning</li>
-						<li>Tablecloth + Linen Settings</li>
-						<li>Event setup + teardown labor</li>
+						<li>Dietary-specific Meals &amp; planning</li>
+						<li>Linen + Tablecloth</li>
 					</ul>
 				</div>
 			</div>
@@ -85,7 +84,7 @@
 				<br><br>
 				Sourcing only the freshest, local, and organic ingredients prepared by top-class, experienced chefs,  we aim for the highest-quality cuisine and memorable experiences.
 				<br><br>
-				Our services do not begin only with food...  We provide professional and courteous service and offer onsite waitstaff, cleanup, labor (event set-up/teardown), and linen for any of your special event needs.</p>
+				Our services do not begin only with food...  We provide professional and courteous service and offer cleanup and even linen as a service for your special event.</p>
 				<br>
 				
 			</div>
@@ -93,10 +92,10 @@
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
 				<ul class="nav" style="padding-bottom: 41px;">
-					<li><a href="" id="social1"></a></li>
-					<li><a href="" id="social2"></a></li>
-					<li><a href="" id="social3"></a></li>
-					<li><a href="" id="social4"></a></li>
+					<li><a href="https://www.facebook.com/EastEndEatz" id="social1" target="_blank" title="fb.com/EastEndEatz"></a></li>
+					<li><a href="" id="social2" target="_blank"></a></li>
+					<li><a href="" id="social3" target="_blank"></a></li>
+					<!-- <li><a href="" id="social4"></a></li> -->
 				</ul>
 			</div>
 		</section>
@@ -127,13 +126,13 @@
 				<div class="col-md-6">
 					<i class="fa fa-user fa-3x"></i>
 					<h5><b>Chef Sean Kelly</b></h5>
-					<p>15+ years of executive experience in fine dining, upscale hotels, and catering. Creator of East End Cafe.</p>
+					<p>Culinary Institute of America training. 15+ years executive experience in fine dining, upscale hotels, and catering.</p>
 				</div>
 
 				<div class="col-md-6">
 					<i class="fa fa-user fa-3x"></i>
 					<h5><b>Chef Dustin Miller</b></h5>
-					<p>Extensive multi-year experience in large events, including Executive Sous Chef Pittsburgh Steelers, Heinz Field and Aramark.</p>
+					<p>Culinary Institute of America training. Extensive experience with large events, including as Executive Sous Chef Pittsburgh Steelers and Heinz Field.</p>
 				</div>
 		         
 			</div>
