--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -40,14 +40,14 @@
 				<img src="modules/core/img/meal1.jpg" alt="Home Chef Services"/>
 		         <h3>Freshly-made Meals!</h3><br>
 		         <h2>Your Personal Chef</h2>
-		         <p>Breakfast, lunch, or dinner.   Around-the-clock, weekly, or on special occaisions.  Our hours of operation depend solely on the wants and needs of the customer.<br><br>
+		         <p>Breakfast, lunch, or dinner.   Around-the-clock, weekly, or on special occasions.  Our hours of operation depend solely on the wants and needs of the customer.<br><br>
 		         Contact us to schedule and see how a private chef can make a wonderful difference in your life.</p>
 			<br>
 			</div>
 
 			<h4>Dietary Restrictions &amp; Routines</h4>
-			<div class="col-md-12" id="image" style="padding-bottom: 8px;">
-				<p>Interested in paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
+			<div class="col-md-12" id="image" style="padding-bottom: 37px;">
+				<p>Interested in Paleo, gluten-free, low-fat, diet for diabetics, or low-sodium eating, food prep, and meal choices?  Give us a ring, or send us an email <a href="mailto:eecpgh@comcast.net">eecpgh@comcast.net</a>.</p>
 			</div>
 
 		</section>
@@ -91,10 +91,10 @@
 
 			<h4>Find Us Online!</h4>
 			<div class="col-md-12">	
-				<ul class="nav" style="padding-bottom: 41px;">
+				<ul class="nav" style="padding-bottom: 64px;">
 					<li><a href="https://www.facebook.com/EastEndEatz" id="social1" target="_blank" title="fb.com/EastEndEatz"></a></li>
-					<li><a href="" id="social2" target="_blank"></a></li>
-					<li><a href="" id="social3" target="_blank"></a></li>
+					<!-- <li><a href="" id="social2" target="_blank"></a></li> -->
+					<li><a href="https://twitter.com/eastendeatz" id="social3" target="_blank"></a></li>
 					<!-- <li><a href="" id="social4"></a></li> -->
 				</ul>
 			</div>
@@ -113,30 +113,38 @@
 			<div class="col-md-12" id="image">
 				<img src="modules/core/img/meal3.jpg" alt="Home Chef Services"/>
 		        <h3>Delivery to Your Door&nbsp;</h3>
-		        <h2>On-time Freshness</h2>
+		        <p>Delicious meals freshly delivered.  Suit your needs - Healthy eating, Convenience, Freshness, Quality. Ask us for more info on meal delivery options.</p>
+		        <!-- -->
+		        <!-- <h2>On-time Freshness</h2>
 		        <p>We deliver fresh, upscale meals to your door.  If you've every wanted to great food without the challenges of time and transportation then this service is for you.
 		        <br><br>
 		        We offer delicious nutritional meals individually packaged that arrive fresh and delicious.  Additionally,  if you are in search ofspecific routine, we can help plan and have your meal ready when you want it.  
 		        <br><br>
-		        Delivered meals bring customization, freshness, and convenience.  Book a scheduling time soon.</p> 
+		        Delivered meals bring customization, freshness, and convenience.  Book a scheduling time soon.</p>  -->
+			</div>
+
+			<h4>Small-Batch Cooking</h4>
+			<div class="col-md-12">
+				<h2>Prepared Food</h2>
+				<p>With small batch cooking we can prepare health and delicious food in quantities to last a few days or through the week.  It's a very popular option amongst customers who liking having options in the refrigerator, and for those who want healthy food consistently on hand at home.</p><br>
+				<p>We are happy when customers are pleasantly surprised how easy and convenient life becomes when you have prepared food on-hand.  We recommend you try this out!</p>
 			</div>
 			
+			
 			<h4>Meet Us</h4>
-			<div class="col-md-12" id="image">
-				<div class="col-md-6">
-					<i class="fa fa-user fa-3x"></i>
-					<h5><b>Chef Sean Kelly</b></h5>
-					<p>Culinary Institute of America training. 15+ years executive experience in fine dining, upscale hotels, and catering.</p>
-				</div>
-
-				<div class="col-md-6">
-					<i class="fa fa-user fa-3x"></i>
-					<h5><b>Chef Dustin Miller</b></h5>
-					<p>Culinary Institute of America training. Extensive experience with large events, including as Executive Sous Chef Pittsburgh Steelers and Heinz Field.</p>
-				</div>
-		         
+			<div class="col-md-12">
+				<i class="fa fa-user fa-3x"></i>
+				<h5><b>Chef Sean Kelly</b></h5>
+				<p>Professionally trained at <b>The Culinary Institute of America</b> <em>(Hyde Park, New York)</em>, with 15+ years executive chef experience in fine dining, upscale hotels, private events, catering, and small-batch cooking.<br>
+				</p>
 			</div>
 
 		</section>	
 </section>
 </ui-view>
+<section class="col-md-12" class="bottomAcknowledgement">
+	<p>&copy; 2014 East End Eatz</p>
+	<p>Website by
+		<a href="" target="_blank">Creative Monster Consulting, LLC.</a>
+	</p>
+</section>
