fix cmcllc link

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -145,6 +145,6 @@
 <section class="col-md-12" class="bottomAcknowledgement">
 	<p>&copy; 2014 East End Eatz</p>
 	<p>Website by
-		<a href="" target="_blank">Creative Monster Consulting, LLC.</a>
+		<a href="http://www.creativemonsterconsulting.com" target="_blank">Creative Monster Consulting, LLC.</a>
 	</p>
 </section>
