--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -43,6 +43,26 @@
 </head>
 
 <body class="ng-cloak">
+
+	<!-- Facebook init-->
+	<script>
+	  window.fbAsyncInit = function() {
+	    FB.init({
+	      appId      : '1465793930360291',
+	      xfbml      : true,
+	      version    : 'v2.1'
+	    });
+	  };
+
+	  (function(d, s, id){
+	     var js, fjs = d.getElementsByTagName(s)[0];
+	     if (d.getElementById(id)) {return;}
+	     js = d.createElement(s); js.id = id;
+	     js.src = "//connect.facebook.net/en_US/sdk.js";
+	     fjs.parentNode.insertBefore(js, fjs);
+	   }(document, 'script', 'facebook-jssdk'));
+	</script>
+
 	<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
 	<section class="content">
 		<section class="container">
