--- a/public/modules/users/views/signin.client.view.html
+++ b/public/modules/users/views/signin.client.view.html
@@ -7,12 +7,12 @@
 		<a href="/auth/twitter" class="undecorated-link">
 			<img src="/modules/users/img/buttons/twitter.png">
 		</a>
-		<a href="/auth/google" class="undecorated-link">
+		<!-- <a href="/auth/google" class="undecorated-link">
 			<img src="/modules/users/img/buttons/google.png">
 		</a>
 		<a href="/auth/linkedin" class="undecorated-link">
 			<img src="/modules/users/img/buttons/linkedin.png">
-		</a>
+		</a> -->
 	</div>
 	<h3 class="col-md-12 text-center">Or with your account</h3>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
@@ -27,8 +27,8 @@
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
 				</div>
 				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
-					<a href="/#!/signup">Sign up</a>
+					<button type="submit" class="btn btn-primary">Sign in</button><!-- &nbsp; or&nbsp;
+					<a href="/#!/signup">Sign up</a> -->
 				</div>
 				<div data-ng-show="error" class="text-center text-danger">
 					<strong data-ng-bind="error"></strong>
