--- a/public/modules/users/views/signin.client.view.html
+++ b/public/modules/users/views/signin.client.view.html
@@ -1,5 +1,5 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
+	<!-- <h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
 	<div class="col-md-12 text-center">
 		<a href="/auth/facebook" class="undecorated-link">
 			<img src="/modules/users/img/buttons/facebook.png">
@@ -7,14 +7,14 @@
 		<a href="/auth/twitter" class="undecorated-link">
 			<img src="/modules/users/img/buttons/twitter.png">
 		</a>
-		<!-- <a href="/auth/google" class="undecorated-link">
+		<a href="/auth/google" class="undecorated-link">
 			<img src="/modules/users/img/buttons/google.png">
 		</a>
 		<a href="/auth/linkedin" class="undecorated-link">
 			<img src="/modules/users/img/buttons/linkedin.png">
-		</a> -->
-	</div>
-	<h3 class="col-md-12 text-center">Or with your account</h3>
+		</a>
+	</div> -->
+	<h3 class="col-md-12 text-center">Sign in to your account <br><em>(administrators only)</em></h3>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
